changed notebook metadata

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -53,7 +53,10 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "6cc599aa-4d0c-486e-bb23-c297cfd4bf58",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
