added training setup

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -51,209 +51,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6cc599aa-4d0c-486e-bb23-c297cfd4bf58",
    "metadata": {
     "scrolled": true,
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🚀 643.0\n",
-      "💎 451.0\n",
-      "🎵 3.0\n",
-      "😥 1.0\n",
-      "🚨 26.0\n",
-      "🤜 1.0\n",
-      "🌙 2.0\n",
-      "🤙 1.0\n",
-      "🤦 3.0\n",
-      "🤩 1.0\n",
-      "👐 7.0\n",
-      "📈 4.0\n",
-      "📌 1.0\n",
-      "‼ 10.0\n",
-      "😎 3.0\n",
-      "❓ 2.0\n",
-      "👀 4.0\n",
-      "🕊 1.0\n",
-      "😒 2.0\n",
-      "😡 3.0\n",
-      "🌈 20.0\n",
-      "📷 41.0\n",
-      "🙃 2.0\n",
-      "🥴 2.0\n",
-      "🦍 119.0\n",
-      "🪰 1.0\n",
-      "💰 5.0\n",
-      "📢 1.0\n",
-      "🩸 4.0\n",
-      "🐶 2.0\n",
-      "🩳 1.0\n",
-      "🧻 5.0\n",
-      "💵 2.0\n",
-      "🔥 9.0\n",
-      "👋 1.0\n",
-      "🍌 11.0\n",
-      "✋ 13.0\n",
-      "🤔 2.0\n",
-      "🔹 4.0\n",
-      "🦧 11.0\n",
-      "✌ 2.0\n",
-      "😠 1.0\n",
-      "♥ 1.0\n",
-      "👏 2.0\n",
-      "🤲 5.0\n",
-      "🙌 27.0\n",
-      "🥊 1.0\n",
-      "🖕 2.0\n",
-      "📄 5.0\n",
-      "🌝 5.0\n",
-      "🖐 9.0\n",
-      "🦅 1.0\n",
-      "🌚 1.0\n",
-      "✊ 3.0\n",
-      "🛫 1.0\n",
-      "⛔ 1.0\n",
-      "✅ 21.0\n",
-      "🪦 1.0\n",
-      "🏁 1.0\n",
-      "🤬 1.0\n",
-      "❗ 7.0\n",
-      "👶 1.0\n",
-      "🍆 9.0\n",
-      "🥜 2.0\n",
-      "☎ 1.0\n",
-      "🦢 1.0\n",
-      "🌎 4.0\n",
-      "✨ 5.0\n",
-      "😂 4.0\n",
-      "© 1.0\n",
-      "🎢 1.0\n",
-      "🦀 2.0\n",
-      "🤡 4.0\n",
-      "ℹ 1.0\n",
-      "⚡ 4.0\n",
-      "📅 1.0\n",
-      "🔮 1.0\n",
-      "⚠ 5.0\n",
-      "🐍 1.0\n",
-      "🐳 7.0\n",
-      "☄ 1.0\n",
-      "🅱 1.0\n",
-      "😬 1.0\n",
-      "🙉 3.0\n",
-      "🤑 2.0\n",
-      "🐝 1.0\n",
-      "🤚 4.0\n",
-      "😔 1.0\n",
-      "🖍 1.0\n",
-      "👌 1.0\n",
-      "🎲 1.0\n",
-      "🐻 10.0\n",
-      "🐼 1.0\n",
-      "🚫 2.0\n",
-      "😳 1.0\n",
-      "🍻 1.0\n",
-      "💯 2.0\n",
-      "🧐 2.0\n",
-      "🐒 2.0\n",
-      "🧠 1.0\n",
-      "👳 1.0\n",
-      "📉 2.0\n",
-      "💹 1.0\n",
-      "🥵 1.0\n",
-      "🤥 1.0\n",
-      "⚽ 1.0\n",
-      "🤘 1.0\n",
-      "👍 2.0\n",
-      "❤ 4.0\n",
-      "🎶 2.0\n",
-      "🏢 1.0\n",
-      "🗣 1.0\n",
-      "💡 8.0\n",
-      "🦠 1.0\n",
-      "🚢 2.0\n",
-      "🌿 1.0\n",
-      "📝 1.0\n",
-      "😭 2.0\n",
-      "🍅 2.0\n",
-      "🌳 2.0\n",
-      "👑 3.0\n",
-      "💠 1.0\n",
-      "🍗 1.0\n",
-      "🍃 1.0\n",
-      "☀ 3.0\n",
-      "😞 1.0\n",
-      "🥷 1.0\n",
-      "🌕 2.0\n",
-      "👉 7.0\n",
-      "🐵 1.0\n",
-      "✈ 1.0\n",
-      "🍦 1.0\n",
-      "🚕 2.0\n",
-      "🚐 1.0\n",
-      "🚚 1.0\n",
-      "🐸 3.0\n",
-      "💕 1.0\n",
-      "😍 2.0\n",
-      "🧨 2.0\n",
-      "🥲 4.0\n",
-      "🚽 1.0\n",
-      "👨 1.0\n",
-      "🎰 8.0\n",
-      "💩 1.0\n",
-      "🛸 1.0\n",
-      "💪 1.0\n",
-      "🥱 1.0\n",
-      "👇 1.0\n",
-      "⭐ 7.0\n",
-      "📰 1.0\n",
-      "🙏 2.0\n",
-      "🍿 1.0\n",
-      "🦋 1.0\n",
-      "▪ 39.0\n",
-      "🌋 1.0\n",
-      "🚂 1.0\n",
-      "👁 8.0\n",
-      "🐰 2.0\n",
-      "⛽ 1.0\n",
-      "🏊 1.0\n",
-      "🕵 15.0\n",
-      "🍀 3.0\n",
-      "🐂 6.0\n",
-      "🐄 4.0\n",
-      "☢ 1.0\n",
-      "☑ 6.0\n",
-      "🌶 1.0\n",
-      "🥂 1.0\n",
-      "🍇 1.0\n",
-      "❇ 14.0\n",
-      "🕒 1.0\n",
-      "🏴 1.0\n",
-      "🧙 1.0\n",
-      "⚙ 1.0\n",
-      "⏱ 1.0\n",
-      "🔋 1.0\n",
-      "💚 1.0\n",
-      "📚 1.0\n",
-      "🏦 1.0\n",
-      "🟢 1.0\n",
-      "⛳ 1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run preprocessing code\n",
     "def preprocess():\n",
     "    f = open('dataset/reddit_wsb.csv', \"r\")\n",
-    "    mat = extract_emojis(f)\n",
+    "    emoji_mat = extract_emojis(f)\n",
     "    for emoji_val in mat.keys():\n",
     "        print(emoji_val, np.sum(mat[emoji_val]))\n",
-    "        \n",
+    "    return emoji_mat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3b667e4-64ef-40c5-9850-1d679cda0d8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "preprocess()"
    ]
   }
