combined notebooks for preprocessing stage

--- a/WordProcessing.ipynb
+++ b/WordProcessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -11,28 +11,26 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import scipy \n",
-    "import matplotlib.pyplot as plt\n",
     "import regex \n",
     "import emoji \n",
-    "import re\n",
-    "\n",
-    "%matplotlib inline "
+    "import re\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "f_in = \"dataset/reddit_wsb.csv\""
+    "#f_in = \"dataset/reddit_wsb.csv\"\n",
+    "#from ipynb.fs.full.WordProcessing import get_words"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -57,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -86,99 +84,31 @@
     "        my_dict[index] = row[col]\n",
     "    return my_dict\n",
     "\n",
-    "\n",
-    "# open csv \n",
-    "# remove all NA in body\n",
-    "#data.dropna(subset=['body'], inplace=True)\n",
-    "#data=data.reset_index()"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#data = pd.read_csv(f_in)\n",
+    "#processed=get_processed_data(data)\n",
+    "#my_dict = convert_to_dict(processed,\"title\")\n",
+    "#print(my_dict[358])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(53187, 8)\n"
-     ]
-    }
-   ],
-   "source": [
-    "data = pd.read_csv(f_in)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "processed=get_processed_data(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "my_dict = convert_to_dict(processed,\"title\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['buy', 'nok', 'we', 'are', 'in', 'power']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(my_dict[358]) #[24398])"
-   ]
   },
   {
    "cell_type": "code",
