--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,22 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "4292809c-4668-4787-b88e-1b2f89765636",
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Import statements go here\n",
     "import numpy as np\n",
     "import emoji\n",
-    "import regex"
+    "import regex\n",
+    "import pandas as pd\n",
+    "\n",
+    "from ipynb.fs.full.WordProcessing import get_processed_data, convert_to_dict\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "a983343f-3280-455b-b2f9-f1eef47cec6c",
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Preprocessing functions go here\n",
@@ -51,9 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "6cc599aa-4d0c-486e-bb23-c297cfd4bf58",
+   "execution_count": 28,
    "metadata": {
+    "collapsed": false,
     "scrolled": true,
     "tags": []
    },
@@ -62,205 +67,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🚀 643.0\n",
-      "💎 451.0\n",
-      "🎵 3.0\n",
-      "😥 1.0\n",
-      "🚨 26.0\n",
-      "🤜 1.0\n",
-      "🌙 2.0\n",
-      "🤙 1.0\n",
-      "🤦 3.0\n",
-      "🤩 1.0\n",
-      "👐 7.0\n",
-      "📈 4.0\n",
-      "📌 1.0\n",
-      "‼ 10.0\n",
-      "😎 3.0\n",
-      "❓ 2.0\n",
-      "👀 4.0\n",
-      "🕊 1.0\n",
-      "😒 2.0\n",
-      "😡 3.0\n",
-      "🌈 20.0\n",
-      "📷 41.0\n",
-      "🙃 2.0\n",
-      "🥴 2.0\n",
-      "🦍 119.0\n",
-      "🪰 1.0\n",
-      "💰 5.0\n",
-      "📢 1.0\n",
-      "🩸 4.0\n",
-      "🐶 2.0\n",
-      "🩳 1.0\n",
-      "🧻 5.0\n",
-      "💵 2.0\n",
-      "🔥 9.0\n",
-      "👋 1.0\n",
-      "🍌 11.0\n",
-      "✋ 13.0\n",
-      "🤔 2.0\n",
-      "🔹 4.0\n",
-      "🦧 11.0\n",
-      "✌ 2.0\n",
-      "😠 1.0\n",
-      "♥ 1.0\n",
-      "👏 2.0\n",
-      "🤲 5.0\n",
-      "🙌 27.0\n",
-      "🥊 1.0\n",
-      "🖕 2.0\n",
-      "📄 5.0\n",
-      "🌝 5.0\n",
-      "🖐 9.0\n",
-      "🦅 1.0\n",
-      "🌚 1.0\n",
-      "✊ 3.0\n",
-      "🛫 1.0\n",
-      "⛔ 1.0\n",
-      "✅ 21.0\n",
-      "🪦 1.0\n",
-      "🏁 1.0\n",
-      "🤬 1.0\n",
-      "❗ 7.0\n",
-      "👶 1.0\n",
-      "🍆 9.0\n",
-      "🥜 2.0\n",
-      "☎ 1.0\n",
-      "🦢 1.0\n",
-      "🌎 4.0\n",
-      "✨ 5.0\n",
-      "😂 4.0\n",
-      "© 1.0\n",
-      "🎢 1.0\n",
-      "🦀 2.0\n",
-      "🤡 4.0\n",
-      "ℹ 1.0\n",
-      "⚡ 4.0\n",
-      "📅 1.0\n",
-      "🔮 1.0\n",
-      "⚠ 5.0\n",
-      "🐍 1.0\n",
-      "🐳 7.0\n",
-      "☄ 1.0\n",
-      "🅱 1.0\n",
-      "😬 1.0\n",
-      "🙉 3.0\n",
-      "🤑 2.0\n",
-      "🐝 1.0\n",
-      "🤚 4.0\n",
-      "😔 1.0\n",
-      "🖍 1.0\n",
-      "👌 1.0\n",
-      "🎲 1.0\n",
-      "🐻 10.0\n",
-      "🐼 1.0\n",
-      "🚫 2.0\n",
-      "😳 1.0\n",
-      "🍻 1.0\n",
-      "💯 2.0\n",
-      "🧐 2.0\n",
-      "🐒 2.0\n",
-      "🧠 1.0\n",
-      "👳 1.0\n",
-      "📉 2.0\n",
-      "💹 1.0\n",
-      "🥵 1.0\n",
-      "🤥 1.0\n",
-      "⚽ 1.0\n",
-      "🤘 1.0\n",
-      "👍 2.0\n",
-      "❤ 4.0\n",
-      "🎶 2.0\n",
-      "🏢 1.0\n",
-      "🗣 1.0\n",
-      "💡 8.0\n",
-      "🦠 1.0\n",
-      "🚢 2.0\n",
-      "🌿 1.0\n",
-      "📝 1.0\n",
-      "😭 2.0\n",
-      "🍅 2.0\n",
-      "🌳 2.0\n",
-      "👑 3.0\n",
-      "💠 1.0\n",
-      "🍗 1.0\n",
-      "🍃 1.0\n",
-      "☀ 3.0\n",
-      "😞 1.0\n",
-      "🥷 1.0\n",
-      "🌕 2.0\n",
-      "👉 7.0\n",
-      "🐵 1.0\n",
-      "✈ 1.0\n",
-      "🍦 1.0\n",
-      "🚕 2.0\n",
-      "🚐 1.0\n",
-      "🚚 1.0\n",
-      "🐸 3.0\n",
-      "💕 1.0\n",
-      "😍 2.0\n",
-      "🧨 2.0\n",
-      "🥲 4.0\n",
-      "🚽 1.0\n",
-      "👨 1.0\n",
-      "🎰 8.0\n",
-      "💩 1.0\n",
-      "🛸 1.0\n",
-      "💪 1.0\n",
-      "🥱 1.0\n",
-      "👇 1.0\n",
-      "⭐ 7.0\n",
-      "📰 1.0\n",
-      "🙏 2.0\n",
-      "🍿 1.0\n",
-      "🦋 1.0\n",
-      "▪ 39.0\n",
-      "🌋 1.0\n",
-      "🚂 1.0\n",
-      "👁 8.0\n",
-      "🐰 2.0\n",
-      "⛽ 1.0\n",
-      "🏊 1.0\n",
-      "🕵 15.0\n",
-      "🍀 3.0\n",
-      "🐂 6.0\n",
-      "🐄 4.0\n",
-      "☢ 1.0\n",
-      "☑ 6.0\n",
-      "🌶 1.0\n",
-      "🥂 1.0\n",
-      "🍇 1.0\n",
-      "❇ 14.0\n",
-      "🕒 1.0\n",
-      "🏴 1.0\n",
-      "🧙 1.0\n",
-      "⚙ 1.0\n",
-      "⏱ 1.0\n",
-      "🔋 1.0\n",
-      "💚 1.0\n",
-      "📚 1.0\n",
-      "🏦 1.0\n",
-      "🟢 1.0\n",
-      "⛳ 1.0\n"
+      "[preprocess::extract emojis]\n",
+      "[preprocess::extract titles and body]\n",
+      "[preprocess::complete]\n"
      ]
     }
    ],
    "source": [
     "# Run preprocessing code\n",
-    "def preprocess():\n",
-    "    f = open('dataset/reddit_wsb.csv', \"r\")\n",
-    "    mat = extract_emojis(f)\n",
-    "    for emoji_val in mat.keys():\n",
-    "        print(emoji_val, np.sum(mat[emoji_val]))\n",
-    "        \n",
-    "preprocess()"
+    "def preprocess(f_in):\n",
+    "    print(\"[preprocess::extract emojis]\")\n",
+    "    f = open(f_in, \"r\")\n",
+    "    my_dict_emoji = extract_emojis(f)\n",
+    "\n",
+    "    # open and process\n",
+    "    print(\"[preprocess::extract titles and body]\")\n",
+    "    data = pd.read_csv(f_in)\n",
+    "    processed=get_processed_data(data)\n",
+    "    my_dict_titles = convert_to_dict(processed,\"title\")\n",
+    "    my_dict_body = convert_to_dict(processed,\"body\")\n",
+    "    print(\"[preprocess::complete]\")\n",
+    "    return my_dict_emoji, my_dict_titles, my_dict_body\n",
+    "    \n",
+    "dict_emojis, dict_titles, dict_body = preprocess('dataset/reddit_wsb.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# sanity check\n",
+    "#dict_titles[2345]\n",
+    "#dict_body[2345]\n",
+    "#for emoji_val in dict_emojis.keys():\n",
+    "#        print(emoji_val, np.sum(dict_emojis[emoji_val]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -274,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
