--- a/train.ipynb
+++ b/train.ipynb
@@ -9,7 +9,8 @@
    "source": [
     "import nltk\n",
     "from nltk.sentiment import SentimentAnalyzer\n",
-    "from nltk.sentiment.util import *"
+    "from nltk.sentiment.util import *\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -19,7 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipynb.fs.full.preprocessing import * "
+    "from ipynb.fs.full.preprocessing import * \n",
+    "from ipynb.fs.full.WordProcessing import * "
    ]
   },
   {
@@ -28,7 +30,9 @@
    "id": "9df08b7a-c7ec-4fcb-914d-c7778b9e31fa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = pd.read_csv(f_in)"
+   ]
   },
   {
    "cell_type": "code",
