setting up training

--- a/WordProcessing.ipynb
+++ b/WordProcessing.ipynb
@@ -30,7 +30,7 @@
    },
    "outputs": [],
    "source": [
-    "#f_in = \"dataset/reddit_wsb.csv\"\n",
+    "f_in = \"dataset/reddit_wsb.csv\"\n",
     "#from ipynb.fs.full.WordProcessing import get_words"
    ]
   },
@@ -105,7 +105,7 @@
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": false
+     "outputs_hidden": true
     }
    },
    "outputs": [],
@@ -120,7 +120,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
@@ -218,7 +221,7 @@
     }
    ],
    "source": [
-    "print(my_dict[358]) #[24398])"
+    "#print(my_dict[358]) #[24398])"
    ]
   },
   {
