--- a/train.ipynb
+++ b/train.ipynb
@@ -15,23 +15,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7901c0cc-232e-4849-9688-e2db9cccfabf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['buy', 'nok', 'we', 'are', 'in', 'power']\n"
+     ]
+    }
+   ],
    "source": [
     "from ipynb.fs.full.preprocessing import * \n",
-    "from ipynb.fs.full.WordProcessing import * "
+    "from ipynb.fs.full.WordProcessing import my_dict "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9df08b7a-c7ec-4fcb-914d-c7778b9e31fa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['buy', 'nok', 'power']\n"
+     ]
+    }
+   ],
    "source": [
-    "data = pd.read_csv(f_in)"
+    "from nltk.corpus import stopwords\n",
+    "stop_words = set(stopwords.words(\"english\"))\n",
+    "\n",
+    "filtered_dict = {}\n",
+    "for i in my_dict.keys():\n",
+    "    filtered_dict[i] = []\n",
+    "    for w in my_dict[i]:\n",
+    "        if w not in stop_words:\n",
+    "            filtered_dict[i].append(w)\n",
+    "print(filtered_dict[358])"
    ]
   },
   {
